# hcr-core

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: README.md  settings.json
.claude/agents/: architect.md  au-executor.md  build-resolver.md  code-reviewer.md  gsd-architect.md  planner.md  security-reviewer.md  tdd-guide.md
.claude/commands/: au-checkpoint.md  au-discuss.md  au-fix.md  au-fresh.md  au-learn.md  au-map.md  au-plan.md  au-review.md  au-security.md  au-tdd.md  au-verify.md  rnd-debug.md
.claude/docs/: mcp-setup.md
.claude/rules/: agents.md  coding-style.md  config-governance.md  git-workflow.md  ground-rules.md  performance.md  rnd-methodology.md  security.md  testing.md
.claude/skills/: pattern-navigator.md  research-orchestration.md  security-review.md  task-management.md  tdd-workflow.md
docs/decisions/: ADR-001-phase1-architecture.md  ADR-002-validation-checkpoint.md
docs/knowledge/: _taxonomy.md  _taxonomy.yaml
docs/research/: _state.yaml  hypotheses.md  paper.md  paper.tex
hcr_core/: __init__.py  cache.py
hcr_core/corpus/: __init__.py  chunker.py  embedder.py  loader.py  wikipedia.py
hcr_core/index/: __init__.py  bm25.py  hybrid.py  vector.py
hcr_core/llm/: __init__.py  claude.py
hcr_core/scoring/: __init__.py  cascade.py  cross_encoder.py  path_score.py
hcr_core/traversal/: __init__.py  beam.py  collapsed.py  dual_path.py  selection.py
hcr_core/tree/: __init__.py  builder.py  clustering.py  (+1 more)
scripts/: analyse_baselines.py  generate_queries.py  inspect_summaries.py  prepare_corpus.py  run_benchmark.py
(+84 files in other folders)
