[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hcr-core"
version = "0.1.0"
description = "Hierarchical Context Retrieval — coarse-to-fine retrieval for LLM systems"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12",
    "anthropic>=0.49",
    "httpx>=0.28",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
    "rank-bm25>=0.2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.11",
    "ruff>=0.6",
]

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "faiss",
    "rank_bm25",
    "sentence_transformers",
    "sklearn.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
